Add more images files to certs.html.

--- a/certs.html
+++ b/certs.html
@@ -16,14 +16,82 @@
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
                 <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="marketing.html">Hexterika Marketing</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="certs.html">certs</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <!-- Main Content (Grid Layout) -->
     <main>
-        <!--Main Content-->>
+        <section class="bg-1">
+            <h1>🎓 Certifications</h1>
+            <p>This page showcases all certifications I've earned across various domains. They're grouped by topic for clarity and future scalability.</p>
+        </section>
+
+        <section class="bg-2">
+            <h2>🔐 Cybersecurity</h2>
+            <ul>
+                <li>
+                    <div>
+                        <p><strong>CompTIA Security+ ce</strong></p>
+                        <p><a href="https://www.credly.com/badges/b856b0d7-bb20-466c-8981-b7744f8bb64f/public_url" target="_blank" rel="noopener noreferrer">Credly CompTIA Security+ ce</a></p>
+                        <img src="assets/images/certs/SangsongthongCompTIASecurityPlusCertPic.png" alt="CompTIA Security+ certificate"/>
+                    </div>
+                </li>
+
+                <li>
+                    <div>
+                        <p><strong>ISC2: Certified in Cybersecurity (CC)</strong></p>
+                        <p><a href="https://www.credly.com/badges/2219a41c-2094-41a5-a530-28cf093c2c29/public_url" target="_blank" rel="noopener noreferrer">Credly ISC2: Certified in Cybersecurity (CC)</a></p>
+                        <img src="assets/images/certs/certified-in-cybersecurity-cc.png" alt="Certified in Cybersecurity (CC) Certificate"/>
+                    </div>
+                </li>
+
+                <li>
+                    <div>
+                        <p><strong>TryHackMe: Jr Penetration Tester Learning Path Certificate Of Completion</strong></p>
+                        <p><a href="..." target="_blank" rel="noopener noreferrer">THM Cert</a></p>
+                        <img src="assets/images/certs/THM-Jr-Pentest-LearningPath-CertOfCompletion.png" alt="TryHackMe: Jr Penetration Tester Learning Path Certificate Of Completion"/>
+                    </div>
+                </li>
+                
+                <!-- Add more if needed -->
+            </ul>
+        </section>
+
+        <section class="bg-1">
+            <h2>💻 Programming</h2>
+            <ul>
+                <li><strong>Python 101</strong> – [Issuer, Year]</li>
+                <!-- Add more -->
+            </ul>
+        </section>
+
+        <section class="bg-2">
+            <h2>📣 Social Media Marketing</h2>
+            <ul>
+                <li>
+                    <div class="cert-social">
+                        <p><strong>Meta: Digital Marketing Associate</strong></p>
+                        <p><a href="https://www.credly.com/badges/1fe61a15-902c-46c8-870f-824abf9474a5/public_url" target="_blank" rel="noopener noreferrer">Credly Meta: Digital Marketing Associate</a></p>
+                        <img src="assets/images/certs/meta-certified-digital-marketing-associate.png" alt="Meta: Digital Marketing Associate">
+                    </div>
+                </li>
+                <!-- Add more -->
+            </ul>
+        </section>
+
+        <section class="bg-1">
+            <h2>📁 Miscellaneous</h2>
+            <ul>
+                <li><strong>Sales Training</strong> – [Issuer, Year]</li>
+                <!-- Add anything that doesn’t fit above -->
+                https://www.credly.com/users/sangsongthong-chantaranothai
+            </ul>
+        </section>
     </main>
+
     <!-- Footer Section -->
     <footer>
         <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
