--- a/marketing.html
+++ b/marketing.html
@@ -17,6 +17,8 @@
                 <li><a href="cyberlab.html"><strong>Hexterika Cyberlab</strong></a></li>
                 <li><a href="designer.html"><strong>Hexterika Designer</strong></a></li>
                 <li><a href="marketing.html"><strong>Hexterika Marketing</strong></a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="certs.html">certs</a></li>
                 <li><a href="contact.html"><strong>Contact</strong></a></li>
             </ul>
         </nav>
