--- a/services.html
+++ b/services.html
@@ -1,3 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hexterika Breaks Free</title>
+    <link rel="stylesheet" href="assets/css/base.css">
+    <link rel="stylesheet" href="assets/css/index.css">
+</head>
+<body>
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
+                <li><a href="designer.html">Hexterika Designer</a></li>
+                <li><a href="marketing.html">Hexterika Marketing</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="certs.html">certs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Main Content (Grid Layout) -->
+    <main>
+        <!--Something-->
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p><strong>&copy; 2025 Hexterika Breaks Free. All rights reserved.</strong></p>
+    </footer>
+</body>
+</html>
+
 <section class="bg-1">
             <h2>Service</h2>
             <p>All services will be offered via Upwork to ensure buyer and seller protection, with the platform handling secure payments.</p>
