Add more certs in the certs.html

--- a/certs.html
+++ b/certs.html
@@ -51,7 +51,7 @@
                 <li>
                     <div>
                         <p><strong>TryHackMe: Jr Penetration Tester Learning Path Certificate Of Completion</strong></p>
-                        <p><a href="..." target="_blank" rel="noopener noreferrer">THM Cert</a></p>
+                        <p><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-MISC2CWYYQ.pdf" target="_blank" rel="noopener noreferrer">THM Cert</a></p>
                         <img src="assets/images/certs/THM-Jr-Pentest-LearningPath-CertOfCompletion.png" alt="TryHackMe: Jr Penetration Tester Learning Path Certificate Of Completion"/>
                     </div>
                 </li>
@@ -63,8 +63,15 @@
         <section class="bg-1">
             <h2>💻 Programming</h2>
             <ul>
-                <li><strong>Python 101</strong> – [Issuer, Year]</li>
                 <!-- Add more -->
+                <li>
+                    <div class="cert-programming">
+                        <p><strong>Meta on Coursera: HTML & CSS In Depth</strong></p>
+                        <p><a href="https://coursera.org/share/747e57f8c58bfd0d11a6cfd1c72d69f9" target="_blank" rel="noopener noreferrer">Meta on Coursera: HTML & CSS In Depth</a></p>
+                        <img src="assets/images/certs/HTML-and-CSS-In-Depth.png" alt="Meta on Coursera: HTML & CSS In Depth Certificate">
+                    </div>
+                </li>
+                
             </ul>
         </section>
 
@@ -87,7 +94,15 @@
             <ul>
                 <li><strong>Sales Training</strong> – [Issuer, Year]</li>
                 <!-- Add anything that doesn’t fit above -->
-                https://www.credly.com/users/sangsongthong-chantaranothai
+
+                <li>
+                    <div class="cert-misc">
+                        <p><strong>Meta: Digital Marketing Associate</strong></p>
+                        <p><a href="https://www.credly.com/users/sangsongthong-chantaranothai" target="_blank" rel="noopener noreferrer">My Credly Profile</a></p>
+                        <img src="" alt="My Credly Profile">
+                    </div>
+                </li>
+
             </ul>
         </section>
     </main>
