Add Services Links from Upwork to my services.html

--- a/services.html
+++ b/services.html
@@ -25,6 +25,10 @@
     <!-- Main Content (Grid Layout) -->
     <main>
         <!--Something-->
+        <h1>My Services</h1>
+        <a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork: Info Sec Specialized Profile</a>
+        <a href="https://www.upwork.com/freelancers/sangsongthong?mp_source=share" target="_blank" rel="noopener noreferrer">Upwork: General Profile</a>
+        <a href="https://www.upwork.com/freelancers/sangsongthong?s=1044578476142100494" target="_blank" rel="noopener noreferrer">Upwork: Web Design Specialized Profile</a>
     </main>
 
     <!-- Footer Section -->
@@ -33,10 +37,4 @@
     </footer>
 </body>
 </html>
-
-<section class="bg-1">
-            <h2>Service</h2>
-            <p>All services will be offered via Upwork to ensure buyer and seller protection, with the platform handling secure payments.</p>
-            <a href="" target="_blank" rel="noopener noreferrer">Hire Me On Upwork!</a>
-        </section>
         
