Done with certs.html except I need the TOEIC Listening and Reading picture.

--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
                 <p>Hexterika is my professional identity — uniting my services under one creative and strategic brand. In the future, I plan to grow Hexterika Breaks Free into a full company that reflects my journey, values, and multidisciplinary work.</p>
         </section>
         <section class="bg-1">
-             <p>Explore my services and work samples:</p>
+             <p>>Interested in working together or exploring what I offer?</p>
             <ul>
-                <li><a href="cyberlab.html">Cybersecurity -- Hexterika Cyberlab</a><br/></li>
-                <li><a href="designer.html">UX/UI Design -- Hexterika Designer</a><br/></li>
+                <li><a href="services.html">View My Services</a><br/></li>
                 <li><a href="contact.html">Get in Touch</a></li>
             </ul>
         </section>
