Fixed typo on index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p>Hexterika is my professional identity — uniting my services under one creative and strategic brand. In the future, I plan to grow Hexterika Breaks Free into a full company that reflects my journey, values, and multidisciplinary work.</p>
         </section>
         <section class="bg-1">
-             <p>>Interested in working together or exploring what I offer?</p>
+             <p>Interested in working together or exploring what I offer?</p>
             <ul>
                 <li><a href="services.html">View My Services</a><br/></li>
                 <li><a href="contact.html">Get in Touch</a></li>
