Almost finish the services.html. I only need to add more links.

--- a/services.html
+++ b/services.html
@@ -25,9 +25,32 @@
     <main>
         <!--Something-->
         <h1>My Services</h1>
-        <a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork: Info Sec Specialized Profile</a>
-        <a href="https://www.upwork.com/freelancers/sangsongthong?mp_source=share" target="_blank" rel="noopener noreferrer">Upwork: General Profile</a>
-        <a href="https://www.upwork.com/freelancers/sangsongthong?s=1044578476142100494" target="_blank" rel="noopener noreferrer">Upwork: Web Design Specialized Profile</a>
+        <ul>
+            <li>
+                <a href="https://www.upwork.com/freelancers/sangsongthong?s=1017484851352698966" target="_blank" rel="noopener noreferrer">Upwork: Info Sec Specialized Profile</a>
+                <p>Offering penetration testing, vulnerability assessment, and cybersecurity consulting tailored to protect digital assets.</p>
+            </li>
+
+            <li>
+                <a href="https://www.upwork.com/freelancers/sangsongthong?mp_source=share" target="_blank" rel="noopener noreferrer">Upwork: General Profile</a>
+                <p>Overview of all my freelance services, including cybersecurity, UI/UX design, programming, and social media marketing. Ideal for tasks that don’t fall under my specialized profiles.</p>
+            </li>
+
+            <li>
+                <a href="https://www.upwork.com/freelancers/sangsongthong?s=1044578476142100494" target="_blank" rel="noopener noreferrer">Upwork: Web Design Specialized Profile</a>
+                <p>Figma-based web and UI design services focused on user experience, layout systems, and responsive interface design.</p>
+            </li>
+
+            <li>
+                <a href="#" target="_blank" rel="noopener noreferrer">Fiverr</a>
+                <p>Affordable packages for quick-turnaround UX/UI Design Using Figma.</p>
+            </li>
+            
+            <li>
+                <a href="#" target="_blank" rel="noopener noreferrer">Preply</a>
+                <p>1-on-1 tutoring in cybersecurity basics for kids and beginner tech topics.</p>
+            </li>
+        </ul>
     </main>
 
     <!-- Footer Section -->
