--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
                 <li><a href="designer.html">Hexterika Designer</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="certs.html">certs</a></li>
+                <li><a href="certs.html">Certificates</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
