Revamp the designer.html to be a portfolio first

--- a/designer.html
+++ b/designer.html
@@ -25,70 +25,65 @@
 
     <!-- Main Content (Grid Layout) -->
     <main>
+    <section class="bg-1">
+        <h1>Hexterika Designer</h1>
+        <p>Hexterika Designer is my creative space to showcase user interface and user experience design work. This page highlights my process, tools, and selected projects — reflecting how I approach digital product design with clarity, usability, and visual consistency.</p>
+        <p>All works presented here are built through hands-on learning, client-free experimentation, and guided capstone projects — shaped by a strong foundation in design thinking and front-end awareness.</p>
+    </section>
+
+    <section class="bg-1">
+        <h2>My UI/UX Design Journey</h2>
+        <p>I’ve completed a UI/UX Design learning path on Coursera, covering foundational design principles, wireframing, prototyping, and usability testing.</p>
+        <p>One of the key milestones is a specialization certificate that demonstrates my commitment to structured and practical design learning.</p>
+        <p>With a detail-oriented mindset, I’ve translated ideas into structured user flows and visuals using Figma — my primary tool for all design tasks.</p>
+        <p>This page serves as my evolving portfolio as I continue developing projects and refining my process as a designer.</p>
+    </section>
+
+    <section class="bg-2">
+        <h2>🛠️ Tools & Skills</h2>
+        <ul>
+            <li><strong>Design Tools:</strong> Figma (main), Canva</li>
+            <li><strong>Core Skills:</strong> Wireframing, Prototyping, User Flows, Responsive Layouts, Component Design</li>
+            <li><strong>Frontend Awareness:</strong> Basic HTML, CSS, JavaScript understanding for design-to-code alignment</li>
+            <li><strong>Design Principles:</strong> Visual hierarchy, UX writing, Accessibility (basic), Consistency</li>
+        </ul>
+    </section>
+
+    <section class="bg-2">
+        <h2>🎯 Featured Projects</h2>
+        <p>Here are selected UI/UX works — clickable prototypes or design files — with descriptions and visual previews.</p>
+
         <section class="bg-1">
-            <h1>Hexterika Designer</h1>
-            <p>At Hexterika Designer, I provide ...</p>
-            <p>Basically a short introduction paragraph or a few paragraphs.</p>
+            <h3>Little Lemon Capstone – Prototype</h3>
+            <p>A mobile-first food ordering app built as part of a capstone project. Focused on navigation clarity and minimal visual clutter.</p>
+            <img src="assets/images/designer/littlelemon-prototype-placeholder.png" alt="Little Lemon Prototype Screenshot" />
+            <p><a href="https://www.figma.com/design/hFfuqzRMc54dnM0BnEA2r6/LittleLemonCapstone-Prototype" target="_blank" rel="noopener noreferrer">View on Figma</a></p>
         </section>
-        <section class="bg-2">
-            <h2>Sample Works</h2>
-            <p>Screenshots Snippets - Use Carosole</p>
-            <p>Brief explanation</p>
-            <p>Share my Figma links</p>
-        </section>
+
         <section class="bg-1">
-            <h2>Service</h2>
-            <p>Brief or full service explanation --> Coming Soon!</p>
-            <p>The service will be on Upwork, Fiverr, and Dribbble because it has both buyers and sellers protection. It will be the platform that handle all payments.</p>
-            <a href="https://www.upwork.com/freelancers/~0180280b95fac18562?s=1110580755057594368" target="_blank" rel="noopener noreferrer">Hire Me On Upwork!</a>
-            <a href="https://www.fiverr.com/s/bd3A65P" target="_blank" rel="noopener noreferrer">Hire Me On Fiverr!</a>
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Hire Me On Dribbble!</a>
+            <h3>Little Lemon Capstone – Wireframe</h3>
+            <p>Early-stage wireframes for the same project, focused on structure and layout without styling details.</p>
+            <img src="assets/images/designer/littlelemon-wireframe-placeholder.png" alt="Little Lemon Wireframe Screenshot" />
+            <p><a href="https://www.figma.com/design/HadK0u8rd4VIVv1s5HqFt1/LittleLemonCapstoneProject-Wireframe" target="_blank" rel="noopener noreferrer">View on Figma</a></p>
         </section>
-        <section class="bg-2">
-            <h2>Projects</h2>
-            <ul>
-                <li><a href="https://www.figma.com/design/hFfuqzRMc54dnM0BnEA2r6/LittleLemonCapstone-Prototype?m=auto&t=qsNcey6fjUQflvqR-1" target="_blank" rel="noopener noreferrer">LittleLemonCapstone-Prototype</a></li>
-                <li><a href="https://www.figma.com/design/HadK0u8rd4VIVv1s5HqFt1/LittleLemonCapstoneProject-Wireframe?m=auto&t=03EP25cOVxzhtWrU-6" target="_blank" rel="noopener noreferrer">LittleLemonCapstoneProject-Wireframe</a></li>
-                <li><a href="https://www.figma.com/design/TcEI6RL94a7VglPy1BEivR/Prototype-TheLittleLemon?m=auto&t=03EP25cOVxzhtWrU-6" target="_blank" rel="noopener noreferrer">Prototype-TheLittleLemon</a></li>
-                <li><a href="https://www.figma.com/@sangsongthong" target="_blank" rel="noopener noreferrer">Figma Proflie</a></li>
-            </ul>
-        </section>
+
         <section class="bg-1">
-            <h2>Why Choose Me?</h2>
-            <p>I have taken a learning path on Coursera in UI/UX Design and Frontend Developer.</p>
-            <p>I have proof of my certificate on Credly. See my full qualification for references.</p>
-            <p>I have various projects to show in the sample works section.</p>
-            <p>See my full qualification: </p>
-            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
+            <h3>The Little Lemon – Alternate Prototype</h3>
+            <p>An alternative design version with different layout approaches, showcasing design variation exploration.</p>
+            <img src="assets/images/designer/littlelemon-alt-prototype-placeholder.png" alt="Alternative Prototype Screenshot" />
+            <p><a href="https://www.figma.com/design/TcEI6RL94a7VglPy1BEivR/Prototype-TheLittleLemon" target="_blank" rel="noopener noreferrer">View on Figma</a></p>
         </section>
-        <section class="bg-2">
-            <h2>Contact</h2>
-            <p>Contact me: <a href="mailto:hexterika.designer@hexterika-breaks-free.website">hexterika.designer@hexterika-breaks-free.website</a></p>
-            <!-- I had trouble with the backend form submission from Formspark and possibly Formspree as well. It triggered Windows Defender and Virus Total so I am going to come back to fix this later. For now I am just going to show my email instead.
-            <form action="https://example.com" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <br>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="13" required></textarea>
-                <br>
-                <button type="submit">Send</button>
-            </form>
-            -->
-        </section>
-        <section class="bg-1">
-            <h2>Social Medias</h2>
-            <ul>
-                <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-                <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-                <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
-            </ul>
-        </section>
-    </main>
+    </section>
+
+    <section class="bg-2">
+        <h2>📁 Additional Works</h2>
+        <p>More design projects and updates are shared through my public Figma profile:</p>
+        <ul>
+            <li><a href="https://www.figma.com/@sangsongthong" target="_blank" rel="noopener noreferrer">Figma Profile</a></li>
+        </ul>
+    </section>
+</main>
+
 
     <!-- Footer Section -->
     <footer>
