Add my Figma Profile to designer.html

--- a/designer.html
+++ b/designer.html
@@ -54,7 +54,7 @@
         <p>Here are selected UI/UX works — clickable prototypes or design files — with descriptions and visual previews.</p>
 
         <section class="bg-1">
-            <h3>Little Lemon Capstone – Prototype</h3>
+            <h3>Little Lemon Capstone Prototype</h3>
             <p>A mobile-first food ordering app built as part of a capstone project. Focused on navigation clarity and minimal visual clutter.</p>
             <img src="assets/images/designer/littlelemon-prototype-placeholder.png" alt="Little Lemon Prototype Screenshot" />
             <p><a href="https://www.figma.com/design/hFfuqzRMc54dnM0BnEA2r6/LittleLemonCapstone-Prototype" target="_blank" rel="noopener noreferrer">View on Figma</a></p>
@@ -68,8 +68,8 @@
         </section>
 
         <section class="bg-1">
-            <h3>The Little Lemon – Alternate Prototype</h3>
-            <p>An alternative design version with different layout approaches, showcasing design variation exploration.</p>
+            <h3>The Little Lemon -- Web Design</h3>
+            <p>An alternative design version focusing on desktop layout approaches, showcasing design variation exploration.</p>
             <img src="assets/images/designer/littlelemon-alt-prototype-placeholder.png" alt="Alternative Prototype Screenshot" />
             <p><a href="https://www.figma.com/design/TcEI6RL94a7VglPy1BEivR/Prototype-TheLittleLemon" target="_blank" rel="noopener noreferrer">View on Figma</a></p>
         </section>
