Simplified contact.html and add Facebook and Instagram as my Social Media Marketing projects into index.html

--- a/index.html
+++ b/index.html
@@ -40,14 +40,36 @@
         </section>
         <section class="bg-1">
             <h2>My Secondary Focus</h2>
-                <p>In addition to my core focus areas, I also apply my skills in:</p>
-                <ul>
-                    <li><strong>Programming</strong>--I built this website myself. My experience includes Python, basic frontend development (HTML, CSS, JavaScript, React), Git/GitHub, and Arduino coding (self-taught during a university project).</li>
-                    <li><strong>Social Media Marketing</strong>--I manage the Facebook and Instagram accounts for Hexterika Cyberlab and Hexterika Designer. I'm Meta Certified in Digital Marketing and skilled in campaign strategy, content creation, and performance tracking.</li>
-                </ul>
-                <p>These skills support the growth of my Hexterika brand and show my adaptability in the digital space.</p>
-                <p><a href="certs.html">View My Full Certifications →</a></p>
+            <p>In addition to my core focus areas, I also apply my skills in:</p>
+            <ul>
+                <li><strong>Programming</strong>
+                    <ul>
+                        <li>Built this website from scratch</li>
+                        <li>Languages: Python, HTML, CSS, JavaScript, React</li>
+                        <li>Version control with Git & GitHub</li>
+                        <li>Arduino coding (self-taught for university project)</li>
+                    </ul>
+                </li>
+                <li><strong>Social Media Marketing</strong>
+                    <ul>
+                        <li>Manage Facebook & Instagram for:
+                            <ul>
+                                <li><a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Facebook</a></li>
+                                <li><a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Instagram</a></li>
+                                <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Hexterika Designer Facebook</a></li>
+                                <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Hexterika Designer Instagram</a></li>
+                            </ul>
+                        </li>
+                        <li>Certified by Meta in Digital Marketing</li>
+                            <li>Skills: campaign strategy, content creation, performance tracking</li>
+                            <li><a href="certs.html">See all certifications →</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <p>These skills support the growth of my Hexterika brand and show my adaptability in the digital space.</p>
         </section>
+
+
         <section class="bg-2">
             <h2>Soft Skills & General Abilities</h2>
                 <p>I bring strong non-technical skills developed through international experience, self-driven learning, and cross-functional roles. I'm adaptable, reliable, and effective at working independently or with global teams.</p>
