--- a/contact.html
+++ b/contact.html
@@ -27,67 +27,26 @@
     <main>
         <section class="bg-1">
             <h1>Contact</h1>
-            <p>Contact me directly without needing to browse the rest of my website.</p>
-            <p>This page is for potential employers who want to contact me directly or for general inquiries.</p>
-            <p>For potential clients, please use the freelance services contact section to keep things straightforward and avoid confusion.</p>
-            <h2>Before You Contact</h2>
-            <p>I have listed all methods to contact me - separated by categories.</p>
-            <p>You can contact me via any of those channels.</p>
-            <p>If you feel overwhelmed, please use the contact form below.</p>
-            <p>If you prefer to reach out to me via my social media, please feel free to do so.</p>
-            <p><strong><em>For direct phone calls, only serious employment opportunities, please. Maintaining this number comes with extra cost, so I reserve it for job-related contact only.</em></strong></p>
-            <p>Please don't hesitate to make contact. I won't bite!</p>
         </section>
         <section class="bg-2">
-            <h2>Reach Me <em>Prefer!</em></h2>
-            <p>Contact me: <a href="mailto:hexterika.contact@hexterika-breaks-free.website">hexterika.contact@hexterika-breaks-free.website</a></p>
-            <!-- I had trouble with the backend form submission from Formspark and possibly Formspree as well. It triggered Windows Defender and Virus Total so I am going to come back to fix this later. For now I am just going to show my email instead.
-            <form action="https://example.com" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <br>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="13" required></textarea>
-                <br>
-                <button type="submit">Send</button>
-            </form>
-            -->
+            <h2>For Job Opportunities:</h2>
+            <p><strong>Email:</strong><a href="mailto:gexterlife.personal@gmail.com">gexterlife.personal@gmail.com</a></p>
+            <p><strong>Phone (US):</strong> +1 (303) 834-7944 <br><em>For serious job inquiries only</em></p>
+            <p><strong>LinkedIn (Preferred):</strong><br>
+            <a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">linkedin.com/in/sangsongthong-chantaranothai</a></p>
+            <p><strong>GitHub:</strong><br>
+            <a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a>
         </section>
         <section class="bg-1">
-            <h2>Get In Touch: Other Channels!</h2>
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer"><strong>LinkedIn </strong><em>Prefer!</em></a></li>
-                    <li><a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">My Portfolio Profile Page</a></li>
-                </ul>
-            <h3>For Cybersecurity Topic</h3>
-                <ul>
-                    <li><a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Facebook</a></li>
-                    <li><a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Hexterika Cyberlab Instagram</a></li>
-                </ul>
-                <p>More info about my projects and services available on the services page.</p>
-            <h3>For UI/UX design using Figma</h3>
-                <ul>
-                    <li><a href="https://www.facebook.com/share/1AYY5bVfaa" target="_blank" rel="noopener noreferrer">Hexterika Designer Facebook</a></li>
-                    <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Hexterika Designer Instagram</a></li>
-                </ul>
-                <p>More info about my projects and services available on the services page.</p>
-            <h3>For other inquiries</h3>
-                <ul>
-                    <li><a href="mailto:hexterika.contact@hexterika-breaks-free.website"><strong>Email: </strong>hexterika.contact@hexterika-breaks-free.website <em>Prefer!</em></a></li>
-                    <li><a href="https://www.facebook.com/share/167ysmzGrS/" target="_blank" rel="noopener noreferrer"><strong>Facebook </strong><em>Prefer!</em></a></li>
-                    <li><a href="https://www.instagram.com/hexterika.breaks.free?igsh=Znhra20xcHk4Mnpx" target="_blank" rel="noopener noreferrer"><strong>Instagram: </strong><em>Prefer!</em></a></li>
-                    <li><a href="https://t.me/hexterikaHQ">Telegram</a></li>
-                    <li><a href="https://wa.me/66982568888">WhatsApp</a></li>
-                    <li><a href="line://ti/p/@discreteloner">Line</a></li>
-                    <li><p><strong>Discord: </strong>#gexter5htb - may take some time to reply.</p></li>
-                    <li><a href="https://x.com/gexterL"><strong>X (formerly Twitter) </strong>– may take some time to reply.</a></li>
-                    <li><a href="tel:+66982568888">Call me +66(98)256-8888 (Thai Number)</a></li>
-                    <li><a href="tel:+13038347944">Call me +1(303)834-7944 (US Number)</a></li>
-                    <p><em>Serious job offers only — this number costs me to keep active.</em></p>
-                </ul>
+            <h2>For Freelance Services:</h2>
+            <ul>
+                <li><strong>General:</strong> <a href="mailto:hexterika.contact@hexterika-breaks-free.website">hexterika.contact@hexterika-breaks-free.website</a></li>
+                <li><strong>Cybersecurity:</strong> <a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website">hexterika.cyberlab@hexterika-breaks-free.website</a></li>
+                <li><strong>Design:</strong> <a href="mailto:hexterika.designer@hexterika-breaks-free.website">hexterika.designer@hexterika-breaks-free.website</a></li>
+            </ul>
+        </section>
+        <section>
+            <p><em>Other channels available after first contact.</em></p>
         </section>
     </main>
 
