Finalized the index.html and make the narative consistent.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     </header>
     <!-- Main Content (Grid Layout) -->
     <main>
+        <!--Intro-->
         <section class="bg-1">
             <h1>Welcome to Hexterika Breaks Free</h1>
                 <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
-                <p><strong>Hello, I'm Sangsongthong</strong> — a multidisciplinary professional passionate about cybersecurity, digital design, and technology. This website is both my personal portfolio and a gateway to my freelance services under the Hexterika brand.</p>
-                <p><strong>Hexterika Breaks Free</strong> represents more than a name — it reflects my belief in breaking boundaries and building a career across different fields that inspire me. It's my personal mission and future vision wrapped into one brand: creative, secure, and adaptable.</p>
+                <p><strong>Hello, I'm Sangsongthong</strong> — a multidisciplinary professional passionate about cybersecurity, design, and digital strategy. This site is both my personal portfolio and the home of my freelance brand, <strong>Hexterika</strong>.</p>
+                <p><strong>Hexterika Breaks Free</strong> began as a space for personal growth and self-liberation, and it has since evolved into a professional identity that brings together creativity, security, and adaptability. It reflects my journey and the future I’m building through technology and design.</p>
         </section>
 
         <!--Core Focuses / Primary Focuses-->
