--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1>Welcome to Hexterika Breaks Free</h1>
                 <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
                 <p><strong>Hello, I'm Sangsongthong</strong> — a multidisciplinary professional passionate about cybersecurity, design, and digital strategy. This site is both my personal portfolio and the home of my freelance brand, <strong>Hexterika</strong>.</p>
-                <p><strong>Hexterika Breaks Free</strong> began as a space for personal growth and self-liberation, and it has since evolved into a professional identity that brings together creativity, security, and adaptability. It reflects my journey and the future I’m building through technology and design.</p>
+                <p><strong>Hexterika Breaks Free</strong> began as a space for personal growth and self-liberation, and it has since evolved into a professional identity that brings together creativity, security, and adaptability. It reflects my journey and the future I'm building through technology and design.</p>
         </section>
 
         <!--Core Focuses / Primary Focuses-->
