Add a paragrah about sales to index.html and probably did something on designer.html.

--- a/designer.html
+++ b/designer.html
@@ -33,9 +33,9 @@
 
     <section class="bg-1">
         <h2>My UI/UX Design Journey</h2>
-        <p>I’ve completed a UI/UX Design learning path on Coursera, covering foundational design principles, wireframing, prototyping, and usability testing.</p>
+        <p>I've completed a UI/UX Design learning path on Coursera, covering foundational design principles, wireframing, prototyping, and usability testing.</p>
         <p>One of the key milestones is a specialization certificate that demonstrates my commitment to structured and practical design learning.</p>
-        <p>With a detail-oriented mindset, I’ve translated ideas into structured user flows and visuals using Figma — my primary tool for all design tasks.</p>
+        <p>With a detail-oriented mindset, I've translated ideas into structured user flows and visuals using Figma — my primary tool for all design tasks.</p>
         <p>This page serves as my evolving portfolio as I continue developing projects and refining my process as a designer.</p>
     </section>
 
@@ -61,7 +61,7 @@
         </section>
 
         <section class="bg-1">
-            <h3>Little Lemon Capstone – Wireframe</h3>
+            <h3>Little Lemon Capstone -- Wireframe</h3>
             <p>Early-stage wireframes for the same project, focused on structure and layout without styling details.</p>
             <img src="assets/images/designer/littlelemon-wireframe-placeholder.png" alt="Little Lemon Wireframe Screenshot" />
             <p><a href="https://www.figma.com/design/HadK0u8rd4VIVv1s5HqFt1/LittleLemonCapstoneProject-Wireframe" target="_blank" rel="noopener noreferrer">View on Figma</a></p>
